<resources>
    <string name="app_name">Academy2020</string>
    <string name="empty" />
    <string name="login">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_successful">Login successful!</string>
    <string name="verify_password">Verify password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_nick_name">Enter nickname</string>
    <string name="please_fill_nuckname">Please select nickname</string>
    <string name="password_too_short">Password is too short</string>
    <string name="verification_is_not_same">Doesn\'t match to password</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="create_another">Refresh</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="avatar_type_abstract">Abstract</string>
    <string name="avatar_type_monster">Monster</string>
    <string name="avatar_type_robot">Robot</string>
    <string name="failed_load_user">Failed to load user</string>
    <string name="failed_to_update_user">Failed to update user</string>
    <string name="user_updated">User updated</string>
</resources>
